--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ li a:hover{
 .App {
   background: linear-gradient(rgb(23,36, 44), rgb(16, 15, 20));
   border-style: solid;
-  border-color: rgb(1, 62, 83);
+  border-color: #013e53;
   border-width: 5px;
   height: 100vh;
   text-align: center;
@@ -43,6 +43,10 @@ li a:hover{
 }
 
 .registerDiv {
+  background: linear-gradient(rgb(23,36, 44), rgb(16, 15, 20));
+  border-style: solid;
+  border-color: #013e53;
+  border-width: 5px;
   padding: 12px 20px;
   margin: 10px 0;
   text-align: center;
@@ -67,7 +71,10 @@ li a:hover{
   list-style-type: none;
 }
 .chatWindow {
-  background: green;
+  background: linear-gradient(rgb(23,36, 44), rgb(16, 15, 20));
+  border-style: solid;
+  border-color: rgb(1, 62, 83);
+  border-width: 5px;
   height: 100%;
 }
 
