--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,15 @@ li a:hover{
   text-decoration: none;
 }
 
+hr {
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #ccc;
+  margin: 1em 0;
+  padding: 0;
+}
+
 .App {
   background: linear-gradient(rgb(23,36, 44), rgb(16, 15, 20));
   border-style: solid;
@@ -78,35 +87,65 @@ li a:hover{
   height: 100%;
 }
 
-.menuArea {
-  height: 10%;
-  width: 100%;
+.iconHeading {
+  background: white;
+  border-radius: 50%;
+  margin: 5px 0px;
+  height: 48px;
+  width: 48px;
+}
+.iconImage{
+  border-radius: 50%;
+  margin: 5px 0px;
+  height: 48px;
+  width: 48px;
+
 }
 
-.messageArea {
+
+.menuArea {
   background-color: #2a2a2a;
+}
+.menuHeading {
+  font-size: 18px;
+  margin: 5px 0;
+  padding: 5px;
+}
+.menu-right{
+  float: right;
+}
+.menuItem {
+  font-size: 16px;
+  margin: 0;
+  padding: 0 5px;
+}
+.messageArea {
+  border-radius: 1%;
+  background-color: whitesmoke;
+  padding: 5px;
   width: 100%;
-  height: 100%;
-  
 }
 
 .messageContainer {
+  color: black;
   margin: 5px 0;
   padding: 0px 5px;
 }
+.messageContainer li{
+  color: black;
+}
 .messageContainer p{
   font-size: 90%;
-  color: white;
 }
 
 .textHolder {
-  background-color: #14161a;
+  background-color: whitesmoke;
   border-radius: 5px;
   position: relative;
 }
 
 .messageBox textarea{
-  color: white;
+  color: black;
 
   -webkit-appearance: none;
   background-color: transparent;
